# agent-personal-vault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  security_report.yml
.github/workflows/: pypi-publish.yml  test.yml
agent_personal_vault/: __init__.py  audit.py  cli.py  consent.py  crypto_store.py  gui.py  mcp_server.py  schemas.py  vault.py
docs/: AGENT_PROTOCOL.md  ANNOUNCEMENT_APPROVAL_PACKET.md  BRANCH_CLEANUP_CANDIDATES.md  EXTERNAL_PUBLICATION_DECISION.md  FINAL_PUBLICATION_AUDIT.md  LAUNCH_MESSAGING.md  LOCAL_GIT_PREP.md  MCP_CLIENT_SETUP.md  OSS_GOVERNANCE.md  PRE_PUBLIC_OBJECTIVE_REVIEW.md  PRIOR_ART_REVIEW.md  PRIVATE_DRY_RUN_REPORT.md  PRODUCT_POSITIONING.md  PUBLICATION_GATE.md  PUBLIC_RELEASE_REVIEW.md  PYPI_TRUSTED_PUBLISHING_PLAN.md  RC_APPROVAL_PACKET.md  RC_APPROVAL_PLAN.md  RELEASE_PACKAGE_DRY_RUN_PLAN.md  RELEASE_READINESS.md  REPUTATION_RISK_REVIEW.md  SECURITY_AND_AGENT_INTEGRATION_ROADMAP.md
examples/: sample_profile.json
scripts/: check_release.py  pii_scan.py  release_policy.py
tests/: test_release_checks.py  test_vault.py
