[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-personal-vault"
version = "0.1.0"
description = "Local-first personal data vault for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Personal Vault contributors" }]
keywords = ["ai-agent", "privacy", "personal-data", "local-first", "japan"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]

[project.scripts]
agent-personal-vault = "agent_personal_vault.cli:main"
apv-gui = "agent_personal_vault.gui:main"

[tool.setuptools.packages.find]
include = ["agent_personal_vault*"]
