[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-personal-vault"
version = "0.1.3"
description = "Alpha local personal-data utility for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Agent Personal Vault contributors" }]
keywords = ["ai-agent", "privacy", "personal-data", "local-first", "japan"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Driedsandwich/agent-personal-vault"
Source = "https://github.com/Driedsandwich/agent-personal-vault"
Issues = "https://github.com/Driedsandwich/agent-personal-vault/issues"
Documentation = "https://github.com/Driedsandwich/agent-personal-vault#readme"

[project.optional-dependencies]
encrypted = ["cryptography>=42"]

[project.scripts]
agent-personal-vault = "agent_personal_vault.cli:main"
apv-gui = "agent_personal_vault.gui:main"
apv-mcp = "agent_personal_vault.mcp_server:main"

[tool.setuptools.packages.find]
include = ["agent_personal_vault*"]
